--- a/.eslintrc
+++ b/.eslintrc
@@ -1,32 +1,13 @@
 {
-  "parser": "babel-eslint",
-  "parserOptions": {
-    "ecmaVersion": 2020,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
-  "env": {
-    "browser": true,
-    "node": true,
-    "es6": true
-  },
-  "extends": ["airbnb"],
-  "plugins": ["import", "react-hooks"],
+  "extends": "standard",
   "rules": {
-    "no-underscore-dangle": "off",
-    "object-curly-newline": 0,
-    "no-console": 0,
-    "no-alert": 0,
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "react/jsx-one-expression-per-line": "off",
-    "linebreak-style": 0,
-    "jsx-a11y/label-has-associated-control": "off",
-    "jsx-a11y/anchor-is-valid": "off",
-    // "react/jsx-props-no-spreading": "off",
-    "no-unused-vars": "off",
-    "consistent-return": "off",
-    "no-restricted-globals": "off"
+    "indent": ["error", 4],
+    "semi": ["error", "always"],
+    "no-trailing-spaces": 0,
+    "keyword-spacing": 0,
+    "no-unused-vars": 1,
+    "no-multiple-empty-lines": 0,
+    "space-before-function-paren": 0,
+    "eol-last": 0
   }
 }
